@@ -1,3 +1,5 @@
+* Add missing format of operand in Unary operator
+
 Version 0.3 - 2014-01-31
 * Add returning to Update
 * Add missing params for returning
